develop:pw image switch

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2252,7 +2252,7 @@ $shareCountBg: $colorBody;
     height: 100%;
     width: 100%;
     object-fit: cover;
-    object-position: 50% 50%;
+    object-position: 50% 30%;
     // Used for the IE lazysizes object-fit polyfill
     font-family: "object-fit: cover";
 
@@ -3928,7 +3928,7 @@ body {
     padding-top: 10px;
   }
   a {
-    color: #282904;
+    color: #ffffff;
     font-size: 16px !important;
     padding: 0 3px;
     @include transition(opacity 0.2s);
@@ -4093,7 +4093,7 @@ body,
       object-position: 50% 20%;
     }
     @media screen and(max-width: 850px) {
-      object-position: 75% 50%; 
+      object-position: 50% 50%; 
     }
   }
 }
