--- a/sections/branded-overlay.liquid
+++ b/sections/branded-overlay.liquid
@@ -1,5 +1,5 @@
 <div class="muted-overlay"></div>
-<img src="{{ 'logo_landing.png' | asset_url }}" />
+<img src="{{ 'logo_landing_white.png' | asset_url }}" />
 <div class="social-nav hide-medium-down">
   <a href="https://www.instagram.com/pierceandward/"><i class="fa fa-instagram fa-fw fa-lg" aria-hidden="true"></i></a>
   <a href="https://www.pinterest.com/pierceandwardinteriors/"><i class="fa fa-pinterest-p fa-fw fa-lg" aria-hidden="true"></i></a>
